connected next auth and mongodb

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
+            "@/lib/*": ["lib/*"],
             "@/utils/*": ["utils/*"],
             "@/types/*": ["types/*"],
             "@/componenets/*": ["componenets/*"]
